--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --output-hashing=none",
+    "package": "cat dist/my-app/{runtime,polyfills,scripts,main}.js | gzip > elements.js.gz","serve": "http-server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
+    "swipejs": "^2.2.14",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
